[package]
name = "bog-rs"
version = "0.1.0"
authors = ["ezxje"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
futures="0.3"
actix-web = "3"
actix-files = "*"
actix-rt = "*"
actix-web-actors = "3"
actix = "0.10.0"
uuid = {version = "0.8", features = ["v4", "serde"]}
tera = "1.5.0"
reqwest = {version = "*", features = ["blocking"]}
serde_json = "1.0"
serde = "*"
dashmap="4.0.2"
